# Fake64

./: .gitignore  AUTHORS  COMPATIBILITY  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  README.md  TODO  acinclude.m4  aclocal.m4  autogen.sh  config.h.in  configure  configure.in  detectmodules.sh  fake64rc  ltmain.sh  make.sh  mkinstalldirs  sample.fake64rc  testrom.tar.bz2
CVS/: Entries  Repository
bfs_audio_module/: Makefile.am  Makefile.in  libaudio.c
bfs_audio_module/CVS/: Entries  Repository
bfs_audio_module/win/: BFs_AudioModule.def  BFs_AudioModule.dsp
bfs_audio_module/win/CVS/: Entries  Repository
bfs_input_module/: Makefile.am  Makefile.in  config.c  libinput.c
bfs_input_module/CVS/: Entries  Repository
bfs_input_module/win/: BFs_InputModule.def  BFs_InputModule.dsp
bfs_input_module/win/CVS/: Entries  Repository
bfs_video_module/CVS/: Repository
bugtracker/: bugtrack.c
bugtracker/CVS/: Entries  Repository
cpucore_dynarec/: DYNAREC.TXT  Makefile.am  Makefile.in  cop0_scp.c  cop1_fpu.c  debugger.c  debugger.h  disass.c  dyna.c  dynstruct.c  dynstruct.h  exec.c  interrupts.c  libcpu.c  memory.c  opcodes.h  opstruct.c  registers.h  savestate.c  x86.c  x86.h
cpucore_dynarec/CVS/: Entries  Repository
cpucore_dynarec/win/: CPU_Dyna.def  CPU_Dyna.dsp
cpucore_dynarec/win/CVS/: Entries  Repository  Root
cpucore_pure_c/: Makefile.am  Makefile.in  binconv.c  config.c  config_options.c  config_options.h  cop0_scp.c  cop1_fpu.c  debugger.c  decode.h  disass.c  exec.c  interrupts.c  libcpu.c  memory.c  opcodes.h  opstruct.c  patch.c  reg_names.c  registers.h  template.c
cpucore_pure_c/CVS/: Entries  Repository
cpucore_pure_c/win/: cpu_c.def  cpu_c.dsp
cpucore_pure_c/win/CVS/: Entries  Repository
include/: config.h  config.h.in  controller.h  decode.h  general.h  linking.h  load_module.h  memory.h  module.h  ostask.h  printd.h  romheader.h  version.h
include/CVS/: Entries  Repository
m4/: assyntax.h
m4/CVS/: Entries  Repository
romloader/: Makefile.am  Makefile.in  byteswap.c  configfile.c  load_module.c  printd.c  romloader.c
romloader/CVS/: Entries  Repository
romloader/win/: LoadModuleWin.c  ROMLoader.dsp  RomLoaderWin.c
romloader/win/CVS/: Entries  Repository
rs_audio_module/: Makefile.am  Makefile.in  libaudio.c
rs_audio_module/CVS/: Entries  Repository
rs_video_module/: 2d.c  Makefile.am  basic_core.c  config.c  config_options.c  config_options.h  dlist_exec_1.c  dlist_exec_1.h  dlist_exec_c.c  dump.c  fps.c  fps.h  libvideo.c  rcp_core.h  rcp_state.c  rcp_state.h  rdpcommand.h  render.c  render.h  sprite_cache.c  ucode00.c  video.h
rs_video_module/CVS/: Entries  Repository
rs_video_module/win/: rs_VideoModule.def  rs_VideoModule.dsp
rs_video_module/win/CVS/: Entries  Repository
sliders_video_module/: Makefile.am  Makefile.in  libvideo.c
sliders_video_module/CVS/: Entries  Repository
sliders_video_module/win/: Sliders_VideoModule.def  Sliders_VideoModule.dsp
sliders_video_module/win/CVS/: Entries  Repository
testsuite/: Makefile.am  fpu.c  main.c  registers.h
testsuite/CVS/: Entries  Repository
win/: fake64w.dsw
win/CVS/: Entries  Repository
