lib_LTLIBRARIES = libcpu.la
libcpu_la_SOURCES = disass.c  libcpu.c  opstruct.c  exec.c  cop0_scp.c cop1_fpu.c memory.c interrupts.c reg_names.c debugger.c
CFLAGS = -g3 -fomit-frame-pointer -O3 -finline-functions -ffast-math -fstrength-reduce -fthread-jumps -frerun-loop-opt -foptimize-register-move -fbranch-probabilities 
